@startuml Product Database Schema (product_db)
!theme plain
skinparam classAttributeIconSize 0
skinparam linetype ortho

package "product_db" {
    
    class Category {
        - id: Integer {PK}
        - name: String
        - description: String {nullable}
        - createdAt: DateTime
        - updatedAt: DateTime
    }
    
    class Product {
        - id: Integer {PK}
        - name: String
        - description: String {nullable}
        - price: Decimal(10,2)
        - vatRate: Decimal(5,2)
        - categoryId: Integer {FK}
        - isActive: Boolean
        - createdAt: DateTime
        - updatedAt: DateTime
    }
    
    class ProductImage {
        - id: Integer {PK}
        - productId: Integer {FK}
        - filename: String
        - filePath: String
        - orderIndex: Integer
    }
    
    ' Relations
    Category ||--o{ Product : "categorizes"
    Product ||--o{ ProductImage : "has images"
}

@enduml
